--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "url": "https://github.com/HACC17/Visualizers.git"
   },
   "engines": {
-    "node": ">= 6.11.2",
-    "npm": ">= 3.10.10"
+    "node": "^6.11.3",
+    "npm": ">=3.10.10"
   },
   "dependencies": {
     "express": "^4.15.4",
